--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
 
         <link href='%PUBLIC_URL%/assets/tailwind-base.css' rel='stylesheet'>
 
+        <script src="https://kit.fontawesome.com/af927534ab.js" crossorigin="anonymous"></script>
+
         <!--
           manifest.json provides metadata used when your web app is added to the
           homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
@@ -30,6 +32,8 @@
 
         <link href='%PUBLIC_URL%/assets/fonts/inter/inter.css' rel='stylesheet'>
         <link href='%PUBLIC_URL%/assets/fonts/meteocons/style.css' rel='stylesheet'>
+
+        <link href='%PUBLIC_URL%/assets/fonts/vazir/vazir.css' rel='stylesheet'>
 
         <noscript id='emotion-insertion-point'></noscript>
         <!--
